@@ -434,4 +434,4 @@ N(OP_PVPLeaderBoardReply),
 N(OP_PVPLeaderBoardDetailsRequest),
 N(OP_PVPLeaderBoardDetailsReply),
 N(OP_DisciplineTimer),
-
+N(OP_RespawnWindow),
